# NS-EOF

./: .gitignore  CMakeLists.txt  README.md  petsc_commandline_arg
CMake/: FindPETSc.cmake  Findspdlog.cmake  Findtinyxml2.cmake
ExampleCases/: Cavity2D.xml  Cavity3D.xml  Channel2D.xml  Channel3D.xml  ChannelBackwardFacingStep2D.xml  ChannelBackwardFacingStep3D.xml
ExampleOutput/: Cavity2D.vtk  Cavity3D.vtk
Source/: Assertion.cpp  Assertion.hpp  BoundaryType.hpp  CMakeLists.txt  Clock.cpp  Clock.hpp  Configuration.cpp  Configuration.hpp  DataStructures.cpp  DataStructures.hpp  Definitions.hpp  FlowField.cpp  FlowField.hpp  GlobalBoundaryFactory.cpp  GlobalBoundaryFactory.hpp  Iterators.cpph  Iterators.hpp  Main.cpp  Meshsize.cpp  Meshsize.hpp  MeshsizeFactory.cpp  MeshsizeFactory.hpp  Parameters.cpp  Parameters.hpp  SanityChecks.cpp  Simulation.cpp  Simulation.hpp  Singleton.hpp  Singularity.hpp  StdAfx.hpp
Source/ParallelManagers/: PetscParallelConfiguration.cpp  PetscParallelConfiguration.hpp
Source/Solvers/: LinearSolver.cpp  LinearSolver.hpp  PetscSolver.cpp  PetscSolver.hpp  SORSolver.cpp  SORSolver.hpp
Source/Stencils/: BFInputStencils.cpp  BFInputStencils.hpp  BFStepInitStencil.cpp  BFStepInitStencil.hpp  BoundaryStencil.hpp  FGHStencil.cpp  FGHStencil.hpp  FieldStencil.hpp  InitTaylorGreenFlowFieldStencil.cpp  InitTaylorGreenFlowFieldStencil.hpp  MaxUStencil.cpp  MaxUStencil.hpp  MovingWallStencils.cpp  MovingWallStencils.hpp  NeumannBoundaryStencils.cpp  NeumannBoundaryStencils.hpp  ObstacleStencil.cpp  ObstacleStencil.hpp  PeriodicBoundaryStencils.cpp  PeriodicBoundaryStencils.hpp  RHSStencil.cpp  RHSStencil.hpp  StencilFunctions.hpp  VTKStencil.cpp  VTKStencil.hpp  VelocityStencil.cpp  VelocityStencil.hpp
Tests/: CMakeLists.txt  DerivativesTest.cpp  FlowFieldTest.cpp  ScalarFieldTest.cpp  VectorFieldTest.cpp
